[package]
name = "tracing-proc-macros"
version = "0.0.1-alpha1"
authors = ["Emil Hammarstrom <emil.hammarstrom@tedsys.se>", "Tokio Contributors <team@tokio.rs>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"

tracing = "0.1.9"
tracing-subscriber = "0.1.4"
